Add Reset css file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title> MICHELLE DAI</title>
+    <link rel="stylesheet" href="text/css" href="./assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="./node_modules/skeleton-css/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="./node_modules/skeleton-css/css/skeleton.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
